--- a/Dev-Blog/BlazorServer/_Imports.razor
+++ b/Dev-Blog/BlazorServer/_Imports.razor
@@ -9,3 +9,5 @@
 @using BlazorServer
 @using BlazorServer.Shared
 @using BlazorServer.Pages.Icons
+@using Microsoft.AspNetCore.Http
+@using BlazorServer.Interfaces
