--- a/Dev-Blog/BlazorServer/_Imports.razor
+++ b/Dev-Blog/BlazorServer/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorServer
+@using BlazorServer.Models
 @using BlazorServer.Shared
 @using BlazorServer.Pages.Icons
 @using Microsoft.AspNetCore.Http
