--- a/Dev-Blog/BlazorServer/Pages/EditPost.razor
+++ b/Dev-Blog/BlazorServer/Pages/EditPost.razor
@@ -1,7 +1,6 @@
 ﻿@page "/editpost/{Id}"
 
-@using BlazorServer.Models
-@inject BlazorServer.Interfaces.IPosts _posts
+@inject IPosts _posts
 @inject NavigationManager NavMgr
 
 <h3>EditPost</h3>
